# uchcharaka

./: .gitignore  000-default.conf  Dockerfile  README.md  start.sh  vowels.ini
uchcharaka-back/: .gcloudignore  Dockerfile  README.md  app.yaml  main.py  pyproject.toml  requirements.txt
uchcharaka-back/test/: testsuite.py  texts.json
uchcharaka-back/uchcharaka/: fixer.py  helper.py  postprocessor.py  preprocessor.py  pyproject.toml  transcriber.py  transliterator.py
uchcharaka-back/uchcharaka.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
uchcharaka-back/uchcharaka/ScriptMap/MainIndic/: Devanagari.py  DevanagariHigh.py  DevanagariLow.py  DevanagariMedium.py  Kannada.py  KannadaHigh.py  KannadaLow.py  KannadaMedium.py  Malayalam.py  MalayalamHigh.py  MalayalamLow.py  MalayalamMedium.py  Sinhala.py  Tamil.py  TamilHigh.py  TamilLow.py  TamilMedium.py  TamilPhoneticHigh.py  TamilPhoneticLow.py  TamilPhoneticMedium.py  Telugu.py  TeluguHigh.py  TeluguLow.py  TeluguMedium.py  Urdu.py
uchcharaka-back/uchcharaka/ScriptMap/Roman/: IPA.py  Inter.py
uchcharaka-back/uchcharaka/test/: PreProcess.py  generate_texts.py  testsuite.py
uchcharaka-back/uchcharaka/uchcharaka.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
uchcharaka-front/: package-lock.json  package.json  quasar.conf.js
uchcharaka-front/.quasar/: app.js  artifacts.json  client-entry.js  import-quasar.js
uchcharaka-front/src/: index.template.html  keys.js
uchcharaka-front/src/components/: ControlsIo.vue  ControlsPlug.vue  ConverterMenu.vue  InputNotice.vue  InputOptions.vue  OutputButtons.vue  (+5 more)
(+13 files in other folders)
